--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spaceflight-news",
+  "name": "spaceflight-news-refactor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
@@ -24,8 +23,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-theme-swapper": "^0.7.3",
     "vite": "^4.4.5"
   }
 }
